cmake_minimum_required(VERSION 3.19)
project(C__Learning)

set(CMAKE_CXX_STANDARD 14)


add_executable(array01 HZAU_itc/Array/Array01.cpp)
add_executable(array02 HZAU_itc/Array/Array02.cpp)
add_executable(array03 HZAU_itc/Array/Array03.cpp)
add_executable(array04 HZAU_itc/Array/Array04.cpp)
add_executable(array05 HZAU_itc/Array/Array05.cpp)

add_executable(cycle_extra01 HZAU_itc/Cycle/cycle_extra/CycleExtra01.cpp)
add_executable(cycle_extra02 HZAU_itc/Cycle/cycle_extra/CycleExtra02.cpp)
add_executable(cycle_extra03 HZAU_itc/Cycle/cycle_extra/CycleExtra03.cpp)

add_executable(cycle01 HZAU_itc/Cycle/Cycle01.cpp)
add_executable(cycle02 HZAU_itc/Cycle/Cycle02.cpp)
add_executable(cycle03 HZAU_itc/Cycle/Cycle03.cpp)
add_executable(cycle04 HZAU_itc/Cycle/Cycle04.cpp)
add_executable(cycle05 HZAU_itc/Cycle/Cycle05.cpp)

add_executable(mooc1 MOOC/chap3/MOOC1.cpp)
add_executable(mooc2 MOOC/chap3/MOOC2.cpp)
add_executable(mooc3 MOOC/chap3/MOOC3.cpp)

add_executable(mooc_chap04_01 MOOC/chap4/MoocChap4_01.cpp)
add_executable(mooc_chap04_02 MOOC/chap4/MoocChap4_02.cpp)
add_executable(mooc_chap04_03 MOOC/chap4/MoocChap4_03.cpp)
add_executable(mooc_chap04_04 MOOC/chap4/MoocChap4_04.cpp)

add_executable(itc_4_01 HZAU_itc/FunctionAndPointer/itc_4_01.cpp)
add_executable(itc_4_02 HZAU_itc/FunctionAndPointer/itc_4_02.cpp)
add_executable(itc_4_03 HZAU_itc/FunctionAndPointer/itc_4_03.cpp)
add_executable(itc_4_04 HZAU_itc/FunctionAndPointer/itc_4_04.cpp)
add_executable(itc_4_05 HZAU_itc/FunctionAndPointer/itc_4_05.cpp)
add_executable(itc_4_06 HZAU_itc/FunctionAndPointer/itc_4_06.cpp)
add_executable(itc_4_07 HZAU_itc/FunctionAndPointer/itc_4_07.cpp)
add_executable(itc_4_08 HZAU_itc/FunctionAndPointer/itc_4_08.cpp)
add_executable(itc_4_09 HZAU_itc/FunctionAndPointer/itc_4_09.cpp)
add_executable(itc_4_10 HZAU_itc/FunctionAndPointer/itc_4_10.cpp)

add_executable(chap5_01 MOOC/chap5/chap5_01.cpp)
add_executable(chap5_02 MOOC/chap5/chap5_02.cpp)
add_executable(chap5_03 MOOC/chap5/chap5_03.cpp)