cmake_minimum_required(VERSION 3.14)
project(HZAU)

set(CMAKE_CXX_STANDARD 14)

add_executable(itc_CycleExtra01 CycleExtra01.cpp)
add_executable(itc_CycleExtra02 CycleExtra02.cpp)
add_executable(itc_CycleExtra03 CycleExtra03.cpp)
add_executable(array01 Array01.cpp)
add_executable(array02 Array02.cpp)
add_executable(array03 Array03.cpp)
add_executable(array04 Array04.cpp)
add_executable(array05 Array05.cpp)
add_executable(demo demo.cpp)